# ots-eval

./: .gitignore  LICENSE  README.md  package_updater.sh  setup.cfg  setup.py
data/: pub1_generated_datasetA.csv  pub1_generated_datasetB.csv  pub3_generated_1d.csv  pub3_generated_2d.csv  pub5_generated_1d.csv  pub6_generated_datasetG1.csv  pub6_generated_datasetG2.csv  pub6_generated_datasetG3.csv  pub7_generated_2d.csv  pub7_generated_2d_outliers.csv
doc/: close.md  cots.md  dact.md  data.md  doots.md  fcsets.md
ots-eval/outlier_detection/: dact.py  doots.py  example.py
ots-eval/stability_evaluation/: example.py
ots_eval/clustering/: cots.py  example.py
ots_eval/outlier_detection/: example.py  reference_histogram_outlier.py
ots_eval/representatives_selection/: Plotter.py  PlotterPX.py  Representatives.py  example.py  example1.py  example2.py  representatives.py
ots_eval/stability_evaluation/: close.py  example.py  fcsets.py
tests/: run_all.py  test_close.py  test_cots.py  test_dact.py  test_doots.py  test_fcsets.py
visualizations/plotly/: plotter_2d.py  plotter_3d.py
visualizations/seaborn/: DataPreprocessor.py  Legend.py  Plotter.py  Stage.py  Subplot.py  __init__.py  plotter.py  test.py
visualizations/seaborn2/: Legend.py  Plotter.py  Stage.py  Subplot.py  example2.py
