[metadata]
name = ots-eval
version = 0.0.1
author = Martha Krakowski, Gerhard Klassen
author_email = martha.krakowski@hhu.de, gerhard.klassen@hhu.de
description = Over-Time Stability Evaluation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tatusch/ots-eval
project_urls =
    Source Code = https://github.com/tatusch/ots-eval
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = ./
packages = find:
python_requires = >=3.7
install_requires =
    pandas>=1.0.0
    numpy>=1.19.2
    scipy>=1.3.0
    numba>=0.50.0

[options.packages.find]
where = ./